Updated Readme.  Removed boilerplate from app component.

--- a/angular.json
+++ b/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "angular-bulma-scss"
+    }
+  },
+  "defaultProject": "angular-bulma-scss",
+  "cli": {
+    "analytics": false
+  }
 }
